--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="nodesketch.js"></script>
-    <title>Document</title>
+    <script src="blob.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
-    Hello world
+    
 </body>
 </html>
